--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JWT Token Library + Middleware for processing basic auth and bearer token Authorization Headers",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha test --recursive --reporter spec"
   },
   "keywords": [
     "JWT",
@@ -26,7 +26,8 @@
   "license": "MIT",
   "devDependencies": {
     "grunt-cli": "^0.1.13",
-    "mocha": "^1.19.0"
+    "mocha": "^1.19.0",
+    "should": "^3.3.1"
   },
   "dependencies": {
     "jws": "^0.2.5"
