--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ node_js:
 before_install:
  - "npm install istanbul -g"
  - "npm install coveralls -g"
+ - "npm install mocha -g"
 
 script: "make ci-travis"
 
