--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
   "devDependencies": {
     "grunt-cli": "^0.1.13",
     "mocha": "^1.18.2",
-    "should": "^3.3.1"
+    "should": "^3.3.1",
+    "istanbul": "^0.2.10"
   },
   "dependencies": {
+
     "jws": "^0.2.5",
     "underscore": "^1.6.0"
   },
